remove extra pages, change win/lose result, neaten, add more comments

--- a/hangman/game.html
+++ b/hangman/game.html
@@ -10,6 +10,8 @@
 <body>
 <div id="banner">
 </div>
+<div id="message-container">
+</div>
 <div id="status">
   <img class="hangman" src='.\img\hangman0.png'>
   <p class="letters" id="word"> </p>
