make submit input a button

--- a/hangman/game.html
+++ b/hangman/game.html
@@ -19,7 +19,7 @@
 </div>
 <div id="play">
     <input id='letter-entry' type="text" value="">
-    <input id='letter-submit' type="submit" onclick="sumbitLetter()">
+    <button id='letter-submit' onclick="sumbitLetter()">Submit</button>
   </form>
 </div>
 </body>
